--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   },
   "author": "chaz",
   "license": "MIT",
+  "dependencies": {
+    "normalize.css": "^5.0.0",
+    "vue": "^2.2.1",
+    "vue-router": "^2.3.0",
+    "vuex": "^2.2.1"
+  },
   "devDependencies": {
-    "autoprefixer": "^6.7.6",
     "axios": "^0.15.3",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "cross-env": "^3.1.4",
-    "css-loader": "^0.26.2",
+    "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
@@ -31,12 +37,5 @@
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.1"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "normalize.css": "^5.0.0",
-    "vue": "^2.2.1",
-    "vue-router": "^2.3.0",
-    "vuex": "^2.2.1"
   }
 }
